# Aura-vision-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/aura/vision/: AuraEngine.java  AuraEngineService.java  MainActivity.java  VisionAccessibilityService.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap/: ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
include/Aura/Camera/: Camera.hpp  CameraEngineer.hpp
include/Aura/Core/: AuraHandler.hpp  Base.hpp  PoolAllocator.hpp  TaskScheduler.hpp
include/Aura/GPU/: Device.hpp
include/Aura/Math/: Matrix4.hpp  Vector3.hpp
include/Aura/Network/: AuraConnector.hpp
include/Aura/Renderer/: VisualEngine.hpp
include/Aura/Vision/: ImageProcessor.hpp  ProVisualEngine.hpp
src/: CMakeLists.txt  main.cpp
src/Camera/: CameraEngineer.cpp
src/Core/: AuraHandler.cpp  PoolAllocator.cpp  TaskScheduler.cpp
src/Network/: AuraConnector.cpp
src/Renderer/: VisualEngine.cpp
src/Vision/: ImageProcessor.cpp  ProVisualEngine.cpp
